# supermusr-data-pipeline

./: Cargo.toml  README.md  flake.nix
.github/scripts/: push-container-images.sh
common/: Cargo.toml
common/src/tracer/: mod.rs
diagnostics/: Cargo.toml  README.md
diagnostics/src/: kafka_tail.rs  main.rs
diagnostics/src/daq_trace/: data.rs  mod.rs
digitiser-aggregator/: Cargo.toml
digitiser-aggregator/src/: main.rs
digitiser-aggregator/src/data/: event.rs  mod.rs
digitiser-aggregator/src/frame/: aggregated.rs  cache.rs  partial.rs
docs/: README.md  style.md  tracing.md
kafka-daq-report/src/: main.rs
kafka-dump/: Cargo.toml  README.md  default.nix
kafka-dump/src/: main.rs
nexus-writer/: Cargo.toml
nexus-writer/src/: error.rs  main.rs  message_handlers.rs
nexus-writer/src/hdf5_handlers/: dataset_flatbuffers.rs  error.rs  mod.rs
nexus-writer/src/nexus/logs/: alarm.rs  f114.rs  mod.rs  se00.rs
nexus-writer/src/nexus_structure/entry/: event_data.rs  mod.rs
nexus-writer/src/nexus_structure/logs/: log.rs
nexus-writer/src/run_engine/: engine.rs  run_messages.rs
nexus-writer/src/run_engine/run/: mod.rs  run_parameters.rs  run_spans.rs
simulator/: Cargo.toml
simulator/src/: main.rs
simulator/src/integrated/: active_pulses.rs  build_messages.rs  send_messages.rs  simulation.rs
simulator/src/integrated/simulation_elements/: digitiser_config.rs  event_list.rs  noise.rs  pulses.rs
simulator/src/integrated/simulation_engine/: engine.rs
simulator/src/runs/: alarm.rs  create_messages.rs  runlog.rs  sample_environment.rs
streaming-types/: Cargo.toml  build.rs
streaming-types/src/: lib.rs  util.rs
trace-reader/: Cargo.toml
trace-reader/src/: main.rs  processing.rs
trace-to-events/: Cargo.toml
trace-to-events/src/: channels.rs  main.rs  parameters.rs  processing.rs
trace-to-events/src/pulse_detection/datatype/: mod.rs
trace-to-events/src/pulse_detection/detectors/: differential_threshold_detector.rs
trace-to-events/src/pulse_detection/window/: finite_differences.rs
trace-viewer/: Cargo.toml
trace-viewer/src/: main.rs
trace-viewer/src/app/sections/search/: context.rs
trace-viewer/src/finder/topic_searcher/: searcher.rs
trace-viewer/src/sessions/: session_engine.rs
trace-viewer/src/structs/: digitiser_messages.rs
trace-viewer/src/structs/server_only/: borrowed_messages.rs  search_results.rs
