[workspace]
resolver = "2"
members = [
  "common",
  "kafka-dump",
  "events-to-histogram",
  "kafka-daq-report",
  "run-simulator",
  "simulator",
  "stream-to-file",
  "streaming-types",
  "trace-archiver",
  "trace-archiver-tdengine",
  "trace-reader",
  "trace-to-events",
]

[workspace.package]
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
assert_approx_eq = "1.1.0"
async-trait = "0.1.68"
chrono = "0.4.33"
clap = { version = "4.4", features = ["derive", "env"] }
crossterm = "0.26.1"
env_logger = "0.10"
flatbuffers = "22.12.6"
hdf5 = "0.8.1"
itertools = "0.11.0"
kagiyama = "0.3.0"
lazy_static = "1.4.0"
log = "0.4"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
num = "0.4.1"
rand = "0.8.5"
ratatui = "0.22.0"
rayon = "1.8.1"
rdkafka = { version = "0.31.0", features = [ "cmake-build", "ssl", "gssapi", "sasl", ] }
serde = { version = "1", features = ["derive"] }
supermusr-common = { path = "./common" }
supermusr-streaming-types = { path = "./streaming-types" }
taos = { version = "0.10.27", default_features = false, features = ["ws"] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
