[workspace]
resolver = "2"
members = [
  "common",
  "diagnostics",
  "digitiser-aggregator",
  "nexus-writer",
  "simulator",
  "streaming-types",
  "trace-reader",
  "trace-to-events",
  "trace-viewer",
]

[workspace.package]
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2024"

[workspace.dependencies]
actix-files = "0.6"
actix-web = { version = "4", features = ["macros"] }
assert_approx_eq = "1.1.0"
cfg-if = "1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive", "env", "cargo", "string"] }
console_error_panic_hook = "0.1"
const_format = "0.2.34"
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
flatbuffers = "25.9.23"
git-version = "0.3.9"
glob = "0.3.3"
hdf5 = { package = "hdf5-metno", version = "0.10.1", features = ["static"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
leptos = { version = "0.8.4", features = ["tracing"] }
leptos_meta = "0.8.5"
leptos_actix = "0.8.5"
leptos_reactive = "0.6.15"
leptos_router = { version = "0.8.4", default-features = false }
leptos-use = { version = "0.16.3", features = ["use_interval"] }
libm = "0.2.15"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
miette = "7.6.0"
ndarray = "0.16.1"
num = "0.4.3"
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["trace", "tonic", "tls-roots"] }
opentelemetry_sdk = { version = "0.22.1", default-features = false, features = ["trace", "rt-tokio"] }
plotly = "0.13.5"
plotters = { version = "0.3.7", default-features = false, features = ["plotters-svg", "svg_backend", "bitmap_encoder", "all_series", "bitmap_backend"] }
rand = "0.9.2"
rand_distr = "0.5.1"
ratatui = "0.29.0"
rayon = "1.11.0"
rdkafka = { version = "0.38.0", default-features = false, features = ["tokio", "cmake-build", "ssl-vendored", "gssapi-vendored", "sasl", "zstd"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
digital-muon-common = { path = "./common" }
digital-muon-streaming-types = { path = "./streaming-types" }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal", "sync"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.20", features = ["std", "fmt", "env-filter"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.17", features = ["v4"] }
wasm-bindgen = "0.2.100"
