[package]
name = "digital-muon-common"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
const_format.workspace = true
metrics.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
rdkafka.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[lints.clippy]
indexing_slicing = "deny"
panic = "deny"
# TODO
# unwrap_used = "deny"
