[package]
name = "digitiser-aggregator"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
git-version.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
miette = { workspace = true, features = ["fancy"] }
rdkafka.workspace = true
digital-muon-common.workspace = true
digital-muon-streaming-types.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono.workspace = true

[lints.clippy]
fallible_impl_from = "deny"
indexing_slicing = "deny"
panic = "deny"
unwrap_used = "deny"
