[package]
name = "nexus-writer"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
git-version.workspace = true
glob.workspace = true
hdf5.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
miette = { workspace = true, features = ["fancy"] }
ndarray.workspace = true
rdkafka.workspace = true
strum.workspace = true
digital-muon-common.workspace = true
digital-muon-streaming-types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints.clippy]
fallible_impl_from = "deny"
indexing_slicing = "deny"
panic = "deny"
# unwrap_used = "deny"  TODO
