[package]
name = "simulator"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
git-version.workspace = true
miette = { workspace = true, features = ["fancy"] }
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
digital-muon-common.workspace = true
digital-muon-streaming-types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints.clippy]
fallible_impl_from = "deny"
# indexing_slicing = "deny"  TODO
panic = "deny"
# unwrap_used = "deny"  TODO
