[package]
name = "digital-muon-streaming-types"
version.workspace = true
license.workspace = true
edition.workspace = true

[build-dependencies]
flatc-rust = "*"

[dependencies]
chrono.workspace = true
flatbuffers.workspace = true
thiserror.workspace = true

[lints.clippy]
fallible_impl_from = "deny"
indexing_slicing = "deny"
panic = "deny"
unwrap_used = "deny"
